# ai-travel-itinerary-planner-v2

./: .coverage-baseline  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  run_cli.py
.claude/: settings.json
.claude/hooks/: post_edit_lint.py  post_edit_tripwire.py  pre_bash_guard.py  stop_tests.py
.claude/skills/audit/: SKILL.md
.claude/skills/debug/: SKILL.md
.github/workflows/: ci.yml
docs/: api-contract.md  debt.md  design-doc.md  engineering-standards.md  grill-log.md  handoff.md  logging.md  prd.md  prompts.md  retro-log.md  roadmap.md
docs/adr/: 0001-tiered-geo-sourcing.md  0002-ui-agnostic-core-cli-first.md  0003-otel-with-postgres-exporter.md  0004-sqlite-state-postgres-logs.md  0005-deterministic-travel-aware-scheduler.md  0006-llm-provider-abstraction-fallback-chain.md  0007-anchors-and-anchor-aware-scheduling.md
docs/decisions/: 001-place-data-source.md  002-application-architecture.md  003-scheduler-heuristic.md  004-persistence-sqlite-cache.md  005-web-delivery.md  006-observability.md  007-travel-time-rounding.md  README.md
docs/prdv1/: ARCHITECTURE.md  PRD.md  ROADMAP.md
docs/prdv2/: ARCHITECTURE.md  PRD.md  README.md  ROADMAP.md
scripts/: coverage_gate.py  coverage_ratchet.py
src/tripplanner/: __init__.py  __main__.py  cli.py  config.py
tests/: test_anchors.py  test_cli_rate.py  test_clustering.py  test_day_windows.py  test_durations.py  test_edits.py  test_entrypoints.py  test_feasibility.py  test_milestone3_exit_criteria.py  test_multiday_engine.py  test_multiday_orchestrator.py  test_observability.py  test_presenters.py  test_presenters_multiday.py  test_schedule_delivery.py  test_scheduler_greedy.py  test_single_day_engine.py  test_smoke.py  test_travel.py  test_web_schedule.py
tests/fixtures/: oneday.json  trip_3day.json
(+51 files in other folders)
