[project]
name = "tripplanner"
version = "0.1.0"
description = "AI travel itinerary planner"
requires-python = ">=3.12"
dependencies = [
    "structlog>=24.1",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.scripts]
tripplanner = "tripplanner.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tripplanner"]

[tool.ruff]
line-length = 100
target-version = "py312"
# .claude/ holds skill + hook scripts (meta-tooling) with their own conventions —
# not part of the tripplanner package, so out of the project's lint scope (mypy
# is already scoped via files=[src,tests]).
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests", "scripts", "run_cli.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tripplanner --cov-report=term-missing --cov-report=json"
filterwarnings = [
    # Third-party: starlette's TestClient deprecates the bundled httpx shim.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.coverage.run]
source = ["tripplanner"]
branch = true
# __main__.py is a thin `python -m` entry guard; its target main() is unit-tested
# and the entrypoint itself is exercised by tests/test_entrypoints.py (subprocess).
omit = ["*/__main__.py"]

[tool.coverage.report]
show_missing = true
